--- a/de_assignmnet7_final/notebook2.ipynb
+++ b/de_assignmnet7_final/notebook2.ipynb
@@ -637,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To gain further insight into the model's performance, we examined the distribution of residuals, the differences between actual and predicted prices, using a histogram. This distribution appears to be roughly centered around zero with a bell-shaped curve indicating that the model's errors are generally random and unbiased which is a positive sign. However the presence of some data points farther from zero suggests larger prediction errors, and the distribution's slight asymmetry implies that the model's performance may vary across different price ranges or listing characteristics. Overall while the residual distribution indicates reasonably good performance it also highlights areas for potential improvement, such as reducing the impact of outliers and addressing potential biases in the model."
+    "To gain further insight into the model's performance i examined the distribution of residuals the differences between actual and predicted prices using a histogram. This distribution appears to be roughly centered around zero with a bell-shaped curve indicating that the model's errors are generally random and unbiased which is a positive sign. However the presence of some data points farther from zero suggests larger prediction errors, and the distribution's slight asymmetry implies that the model's performance may vary across different price ranges or listing characteristics. Overall while the residual distribution indicates reasonably good performance 
    ]
   },
   {
