--- a/de_assignmnet7_final/notebook2.ipynb
+++ b/de_assignmnet7_final/notebook2.ipynb
@@ -683,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The percentage error is defined as the absolute difference between the actual and predicted prices, divided by the actual price and multiplied by 100. This metric provides a relative measure of how far off the predictions are from the true values. From this sample, we can see that most predictions have a percentage error below 15%, with a few exceptions a 34.95% error for one prediction. This indicates that the model performs reasonably well for most cases but struggles with certain outliers."
+    "The percentage error is defined as the absolute difference between the actual and predicted prices, divided by the actual price and multiplied by 100. This metric provides a relative measure of how far off the predictions are from the true values. From this sample we can see that most predictions have a percentage error below 15%, with a few exceptions a 34.95% error for one prediction. This indicates that the model performs reasonably well for most cases "
    ]
   },
   {
