--- a/de_assignmnet7_final/notebook2.ipynb
+++ b/de_assignmnet7_final/notebook2.ipynb
@@ -854,7 +854,7 @@
     "# Conclusion\n",
     "This project was a valuable learning experience that allowed me to apply my data science skills to a real-world problem. By analyzing the Chicago Airbnb dataset I gained insights into the factors that influence nightly pricing such as property type, location, minimum stay requirements, and host activity. These insights could help Airbnb hosts optimize their pricing strategies and guide potential investors in making informed decisions.\n",
     "\n",
-    "While the model achieved good  accuracy there is always room for improvement. For example incorporating additional data sources, such as seasonal trends or local events, could further enhance the model's predictive power. Additionally experimenting with more advanced algorithms such as Gradient Boosting Machines (GBM) or Neural Networks could yield better results.\n",
+    "While the model achieved good  accuracy there is always room for improvement. For example incorporating additional data sources such as seasonal trends or local events could further enhance the model's predictive power. Additionally i will experiment with more advanced algorithms such as Gradient Boosting Machines (GBM) or Neural Networks .\n",
     "\n"
    ]
   }
