--- a/de_assignmnet7_final/notebook1.ipynb
+++ b/de_assignmnet7_final/notebook1.ipynb
@@ -780,7 +780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Missing Values of  reviews_per_month missing values were replaced with 0.A missing value in reviews_per_month likely indicates that the listing has not received any reviews. Replacing these missing values with 0 assumes that the absence of a review count means the listing has had no reviews rather than assuming some arbitrary non-zero value. This avoids introducing bias by imputing a value that could artificially inflate or deflate the review count.\n"
+    "Missing Values of  reviews_per_month missing values were replaced with 0.A missing value in reviews_per_month likely indicates that the listing has not received any reviews. Replacing these missing values with 0 assumes that the absence of a review count means the listing has had no reviews rather than assuming some arbitrary non-zero value. This avoids introducing bias by imputing a value .\n"
    ]
   },
   {
