--- a/de_assignmnet7_final/notebook1.ipynb
+++ b/de_assignmnet7_final/notebook1.ipynb
@@ -1845,7 +1845,7 @@
    "source": [
     "# Algorithm Selection\n",
     "\n",
-    "For our Airbnb price prediction task we have chosen the RandomForestRegressor algorithm. This method offers several advantages that make it well suited for our problem:\n",
+    "For our Airbnb price prediction task i have chosen the RandomForestRegressor algorithm. This method offers several advantages that make it well suited for our problem:\n",
     "\n",
     "Robustness: Random Forest is robust to outliers and noisy data which is important given the potential variability in Airbnb listing data.\n",
     "\n",
